# efftw

./: CMakeLists.txt  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/efftw/: efftw.hpp
src/: main.cpp
